@@ -38,10 +38,19 @@ public class SerializationElementReader implements TupleInputStream.ElementReade
   /** Field LOG */
   private static final Logger LOG = Logger.getLogger( SerializationElementReader.class );
 
+  /** Field tupleSerialization */
   private final TupleSerialization tupleSerialization;
 
+  /** Field deserializers */
   Map<String, Deserializer> deserializers = new HashMap<String, Deserializer>();
+  /** Field instances */
+  Map<String, Comparable> instances = new HashMap<String, Comparable>();
 
+  /**
+   * Constructor SerializationElementReader creates a new SerializationElementReader instance.
+   *
+   * @param tupleSerialization of type TupleSerialization
+   */
   public SerializationElementReader( TupleSerialization tupleSerialization )
     {
     this.tupleSerialization = tupleSerialization;
@@ -65,9 +74,12 @@ public class SerializationElementReader implements TupleInputStream.ElementReade
       deserializers.put( className, deserializer );
       }
 
+    Comparable foundComparable = instances.get( className );
+    Comparable comparable = null;
+
     try
       {
-      return (Comparable) deserializer.deserialize( null );
+      comparable = (Comparable) deserializer.deserialize( foundComparable );
       }
     catch( IOException exception )
       {
@@ -75,10 +87,17 @@ public class SerializationElementReader implements TupleInputStream.ElementReade
 
       throw exception;
       }
+
+    if( foundComparable == null )
+      instances.put( className, comparable );
+
+    return comparable;
     }
 
   public void close()
     {
+    instances.clear();
+
     if( deserializers.size() == 0 )
       return;
 
